# WrapperSocket

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  Socket.hpp  tcpClient.hpp  tcpServer.hpp  udpClient.hpp  udpServer.hpp
core/src/: Socket.cpp  tcpClient.cpp  tcpServer.cpp  udpClient.cpp  udpServer.cpp
example/: CMakeLists.txt
example/client/: CMakeLists.txt  main.cpp
example/server/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  Exception.hpp  defines.hpp  template.hpp
utils/src/: template.cpp
